--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'   # 🔥 Node.js 20 use කරන්න
 
       - name: Install dependencies
         run: npm install
@@ -25,8 +25,8 @@ jobs:
         run: |
           npm install -g pm2
           pm2 start npm --name my-app -- start
-          pm2 logs --lines 10
-          sleep 6000  # Keep alive for 1 minute
+          pm2 logs --lines 20   # log lines little more
+          sleep 6000            # keep alive 100 minute (6000)
 
       - name: Stop PM2
         if: always()
